--- a/WebContent/fragments/Navigateur.html
+++ b/WebContent/fragments/Navigateur.html
@@ -1,10 +1,22 @@
-
-	<nav>
-	 	<ul class="topnav">
-	  		<li><a class="active" href="#accueil">Accueil</a></li>
-	  		<li><a href="#contact">Nous contacter</a></li>
-	  		<li><a href="#connecter">Se connecter</a></li>	
-		</ul>
-	</nav>
-</body>
-</html>
+<nav class="navbar navbar-inverse">
+	<div class="container-fluid" id="idbarre">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target="#maNav">
+					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand lien" data-lien="listeVoyages.html" href="#" >BoVoyage</a>
+		</div>
+		<div class="collapse navbar-collapse" id="maNav">
+			<ul class="nav navbar-nav">
+				<li><a href="/BoVoyage2" class="lien">Accueil</a></li>
+				<li><a href="#" class="lien">Nous contacter</a></li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#" class="lien">S'enregister</a>
+				<li><a href="#" class="lien">Se connecter</a>
+			</ul>
+		</div>
+	</div>
+</nav>
