--- a/WebContent/fragments/Navigateur.html
+++ b/WebContent/fragments/Navigateur.html
@@ -6,16 +6,16 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand lien" data-lien="listeVoyages.html" href="#" >BoVoyage</a>
+			<a class="navbar-brand lien" href="/BoVoyage2" >BoVoyage</a>
 		</div>
 		<div class="collapse navbar-collapse" id="maNav">
 			<ul class="nav navbar-nav">
-				<li><a href="/BoVoyage2" class="lien">Accueil</a></li>
-				<li><a href="#" class="lien">Nous contacter</a></li>
+				<li><a href="/BoVoyage2" >Accueil</a></li>
+				<li><a href="#" >Nous contacter</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a href="#" class="lien">S'enregister</a>
-				<li><a href="#" class="lien">Se connecter</a>
+				<li><a href="#" >S'enregister</a>
+				<li><a href="#" >Se connecter</a>
 			</ul>
 		</div>
 	</div>
